force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Document_Collection__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Collection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>--DEPRECATED-- Use Document_Collection_Reference__c.</description>
    <label>-D Document Collection</label>
    <referenceTo>LLC_BI__Document_Store__c</referenceTo>
    <relationshipLabel>Document Collection Indices</relationshipLabel>
    <relationshipName>Document_Collection_Indices</relationshipName>
    <type>Lookup</type>
</CustomField>