force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Document_Metadata__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Metadata__c</fullName>
    <description>This optional field is used for storing additional metadata relevant to the related document.</description>
    <inlineHelpText>This optional field is used for storing additional metadata relevant to the related document.</inlineHelpText>
    <label>Document Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>