force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Document_Store__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. This field associates the Document Collection record which represents a collection of documents.</description>
    <label>Document Store</label>
    <referenceTo>LLC_BI__Document_Store__c</referenceTo>
    <relationshipLabel>Document Store Collection Indices</relationshipLabel>
    <relationshipName>Document_Store_Collection_Indices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>