force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>The system automatically sets this optional picklist value when a user instructs the system to perform an action on a document. The system will not perform the action associated with the value if the value is already set, which prevents users from inadvertently performing an action on the same document more than once. The default value is null.</description>
    <inlineHelpText>Document Collection Index status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INPROGRESS</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>QUEUED</fullName>
                <label>Queued</label>
            </value>
            <value>
                <fullName>UPLOADED</fullName>
                <label>Uploaded</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>